# comix

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HAL_DESIGN_GUIDE.md  Makefile  README.md  README_gitlab.md  REFACTOR_LOG.md  REFACTOR_PLAN.md  SMP_DEBUG_WALKTHROUGH.md  book.toml  debugging_report.md  flake.nix  rust-toolchain.toml  test-log.txt  walkthrough.md
doc/: README.md
os/: Cargo.toml  Makefile  build.rs  qemu-loongarch-run.sh  qemu-run.sh  rust-toolchain.toml
os/.cargo/: config.toml
os/src/: config.rs  console.rs  entry.asm  linker.ld  loongarch_linker.ld  main.rs  sbi.rs  test.rs
os/src/arch/: abi.rs  address.rs  arch.rs  arch_impl.rs  cpu_ops.rs  memory_impl.rs  mock_stubs.rs  mod.rs  plat.rs  task.rs  virtual_memory.rs
os/src/arch/loongarch/: compiler_builtins.rs  constant.rs  cpu_ops.rs  info.rs  ipi.rs  lib.rs  memory.rs  mod.rs  platform.rs  selftest.rs  syscall.rs  timer.rs
os/src/arch/mock/: arch.rs  boot.rs  constant.rs  intr.rs  ipi.rs  kernel.rs  lib.rs  mm.rs  mod.rs  platform.rs  timer.rs  trap.rs
os/src/arch/riscv/: boot.rs  constant.rs  cpu_ops.rs  info.rs  ipi.rs  lib.rs  memory.rs  mod.rs  platform.rs  sbi.rs  syscall.rs  timer.rs
os/src/device/: device_tree.rs  mod.rs  virtio_hal.rs
os/src/device/block/: mod.rs  partition.rs  ram_disk.rs  virtio_blk.rs
os/src/device/bus/: mod.rs  pcie.rs  virtio_mmio.rs
os/src/device/console/: frame_console.rs  mod.rs  uart_console.rs
os/src/device/gpu/: mod.rs  virtio_gpu.rs
os/src/device/input/: mod.rs  virtio_input.rs
os/src/device/irq/: mod.rs  plic.rs
os/src/device/net/: config.rs  interface.rs  loopback.rs  mod.rs  net_device.rs  network_config.rs  network_interface.rs  null_net.rs  virtio_net.rs
os/src/device/rtc/: mod.rs  rtc_goldfish.rs
os/src/device/serial/: mod.rs  uart16550.rs
os/src/device/tests/: mod.rs  partition.rs  ram_disk.rs
os/src/devices/: block_device.rs  mod.rs  net_device.rs  ram_disk.rs  virtio_hal.rs
os/src/fs/: mod.rs  simple_fs.rs  smfs.rs
os/src/fs/ext4/: adpaters.rs  inode.rs  mod.rs
os/src/fs/proc/: inode.rs  mod.rs  proc.rs
os/src/fs/sysfs/: device_registry.rs  inode.rs  mod.rs  sysfs.rs
os/src/fs/tests/: mod.rs  simple_fs_basic.rs  simple_fs_dir.rs  simple_fs_integration.rs  simple_fs_permission.rs  simple_fs_ramdisk.rs
os/src/hal/: address.rs  arch.rs  cpu_ops.rs  mock.rs  mod.rs  virtual_memory.rs
os/src/ipc/: message.rs  mod.rs  pipe.rs  shared_memory.rs  signal.rs
os/src/kernel/: boot.rs  cpu.rs  mod.rs  task.rs  task_info.rs  task_struct.rs  tid_allocator.rs  time.rs  timer.rs  timer_queue.rs  uts_namespace.rs
os/src/log/: buffer.rs  config.rs  context.rs  entry.rs  filter.rs  level.rs  log_core.rs  macros.rs  mod.rs
os/src/mm/: heap.rs  mod.rs  physmem.rs
os/src/net/: config.rs  device.rs  interface.rs  mod.rs  protocol.rs  socket.rs  stack.rs  unix_socket.rs
os/src/security/: entropy_pool.rs  mod.rs
os/src/sync/: intr_guard.rs  mod.rs  mutex.rs  per_cpu.rs  preempt.rs  raw_spin_lock.rs  raw_spin_lock_without_guard.rs  rwlock.rs  sleep_lock.rs  spin_lock.rs  ticket_lock.rs
os/src/test/: guard.rs  macros.rs  mod.rs  net_test.rs  test.rs
os/src/tool/: mod.rs  ring_buffer.rs  stdio.rs  str.rs  user_buffer.rs
os/src/uapi/: cred.rs  errno.rs  fcntl.rs  fs.rs  futex.rs  ioctl.rs  iovec.rs  ipc.rs  log.rs  mm.rs  mod.rs  reboot.rs  resource.rs  sched.rs  select.rs  signal.rs  socket.rs  sysinfo.rs  time.rs  types.rs  uts_namespace.rs  wait.rs
os/src/util/: address.rs  mem.rs  mod.rs  ring_buffer.rs  stdio.rs  str.rs  user_buffer.rs
os/src/vfs/: adapter.rs  dentry.rs  dev.rs  devno.rs  error.rs  fd_table.rs  file.rs  file_lock.rs  file_system.rs  inode.rs  mod.rs  mount.rs  page_cache.rs  path.rs  stdio.rs
user/init/: Cargo.toml
user/init/.cargo/: config.toml
user/init/src/: main.rs
(+440 files in other folders)
