[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
# 基础依赖（始终需要）
lock_api = "0.4"
bitflags = { version = "2.10.0" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
once_cell = { version = "1.21.3", default-features = false, features = [
    "alloc",
    "race",
] }
paste = "1.0"

# 功能分层依赖（optional，通过 feature gate 引入）
talc = { version = "4", default-features = false, features = ["nightly_api", "lock_api"], optional = true }
hashbrown = { version = "0.16.1", optional = true }
xmas-elf = { version = "0.9", optional = true }
ext4_rs = { version = "1.3.2", optional = true }
virtio-drivers = { version = "0.12.0", optional = true }
fdt = { version = "0.1.5", optional = true }
smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-tcp", "socket-udp"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
uart_16550 = { version = "0.4.0", optional = true }

[features]
default = ["sync", "alloc", "paging", "proc_vm", "fs", "net", "device"]
sync = []
alloc = ["sync", "dep:talc"]
# device: 驱动层（virtio, fdt, uart, rtc）
device = ["alloc", "dep:virtio-drivers", "dep:fdt", "dep:uart_16550", "dep:chrono"]
paging = ["alloc"]
proc = ["sync", "dep:hashbrown", "dep:xmas-elf"]
fs = ["proc", "device", "dep:ext4_rs"]
proc_vm = ["paging", "fs"]
net = ["sync", "device", "dep:smoltcp"]
proto-ipv6 = []

# RISC-V 架构特定依赖
[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = "0.15.0"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
private_intra_doc_links = "deny"

[lints.rust]
missing_docs = "deny"
single_use_lifetimes = "warn"

[lints.clippy]
todo = "warn"
needless_borrow = "deny"
redundant_clone = "deny"

[profile.dev]
opt-level = 1  # 启用基本优化以减小代码体积
panic = "abort"

[profile.test]
opt-level = 1  # 测试模式也启用基本优化
panic = "abort"
